# winsmux

./: .gitattributes  .gitignore  .psmux-bridge.yaml  .psmux-bridge.yaml.example  .psmux.conf  .winsmux.conf  .winsmux.yaml  .winsmux.yaml.example  AGENT-BASE.md  AGENT.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GUARDRAILS.md  LICENSE  README.ja.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSION  install.ps1  package-lock.json  package.json
.agents/: README.md
.claude/: CLAUDE.md  settings.json
.githooks/: pre-commit  pre-commit-whitelist.ps1  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.references/: 2026-04-11-CODEX_RELEASE_TEMPLATE_ALIGNMENT.md  article-update-plan.md  orchestra-isolation-research.md  ui-commander-chat-requirements.md
core/: .gitignore  Cargo.toml  README.md
core/.github/workflows/: release.yml
core/crates/portable-pty-winsmux/: Cargo.toml  README.md
core/crates/portable-pty-winsmux/src/win/: psuedocon.rs
core/crates/vt100-winsmux/: Cargo.toml
core/crates/vt100-winsmux/src/: lib.rs  perform.rs  screen.rs
core/docs/: claude-code.md  compatibility.md  configuration.md  control-mode.md  faq.md  features.md  keybindings.md  mouse-ssh.md  multi-shell.md  performance.md  plugins.md  scripting.md  tmux_args_reference.md  warm-sessions.md
core/scripts/: build.ps1
core/src/: app.rs  cli.rs  client.rs  commands.rs  common_contract.rs  control.rs  copy_mode.rs  dogfood.rs  event_contract.rs  help.rs  ledger.rs  machine_contract.rs  main.rs  manifest_contract.rs  operator_cli.rs  pane.rs  popup.rs  project_settings_render.rs  read_path.rs  rendering.rs  search_ledger.rs  session.rs  shell_lifecycle.rs  ssh_input.rs  terminal_engine.rs  tree.rs  types.rs  util.rs  window_ops.rs  workflow.rs  workspace_builtin_provider.rs  workspace_project_settings.rs  workspace_recipe.rs  workspace_runtime_overlays.rs
core/src/server/: connection.rs  helpers.rs  mod.rs  option_catalog.rs
core/tests/: run_all_tests.ps1  test_bind_pipe_key.ps1  test_issue133_hook_duplicates.ps1  test_mouse_hover.ps1
core/tests-rs/: common_contract.rs  event_contract.rs  fixture_comparison.rs  ledger_contract.rs  machine_contract.rs  manifest_contract.rs  operator_cli.rs  operator_cli_unit.rs  search_ledger_contract.rs  session_contract_test.rs  test_client.rs  test_commands_audit.rs  test_commands_new.rs  test_issue151_strict_mode.rs  test_issue155_rendering.rs  test_issue155_sgr_attrs.rs  test_issue169_manual_rename.rs  test_parity.rs  test_server.rs  test_task205_focus.rs  test_vt100_screen.rs  workflow_contract.rs  workspace_recipe_contract.rs
docs/: README.ja.md  README.md  REQUIREMENTS.md  ROLE-DEFINITIONS.md  TROUBLESHOOTING.ja.md  TROUBLESHOOTING.md  agent-readiness-research.md  authentication-support.ja.md  authentication-support.md  ci-checklist.md  cli-comparison-bakeoff.ja.md  cli-comparison-bakeoff.md  control-mode.md  customization.ja.md  customization.md  dogfood.md  external-control-plane.ja.md  external-control-plane.md  faq.md  google-colab-workers.ja.md  google-colab-workers.md  handoff.md  installation.ja.md  installation.md  meta-planning-layer-design.md  operator-model.md  operator-playbook.md  pane-border-guide.md  provider-and-model-support.ja.md  provider-and-model-support.md  quickstart.ja.md  quickstart.md  repo-surface-policy.md  review-notes.md  source-access.ja.md  source-access.md
git-graph/: Cargo.toml  README.md  analysis-notes.md
hooks/: pre-commit.sample
psmux-bridge/: README.md  mcp-server.js  plugin.conf  psmux-bridge.ps1
scripts/: assert-install-downloads-exist.ps1  assert-pester-shard-coverage.ps1  assert-release-notes-quality.ps1  audit-public-surface.ps1  audit-staged-public-surface.ps1  banner.mjs  bootstrap-git-guard.ps1  bump-version.ps1  codex-subagent-worktree-guard.ps1  generate-release-notes.ps1  git-guard.ps1  gitleaks-history-baseline.txt  gitleaks-history.ps1  google-colab-cli-adapter.ps1  google_colab_cli_adapter.py  import-cli-bakeoff-harnessbench-reference.ps1  invoke-cli-bakeoff-worker.ps1  invoke-harnessbench-hidden-check.ps1  new-cli-bakeoff-benchmark-run.ps1  new-cli-bakeoff-harnessbench-pack.ps1  new-cli-bakeoff-harnessbench-run-matrix.ps1  new-cli-bakeoff-run.ps1  psmux-bridge.ps1  run-cli-bakeoff-local-workers.ps1  run-cli-bakeoff-openrouter.ps1  run-colab-llm-e2e.ps1  run-tests.ps1  stage-npm-release.mjs  start-cli-bakeoff-desktop.ps1  start-orchestra.ps1  summarize-cli-bakeoff.ps1  sync-project-views.ps1  test-cli-bakeoff-preflight.ps1  test-cli-bakeoff-recording-ready.ps1  test-install-e2e.ps1  test-install-redirected.ps1  test-local-llm-e2e.ps1  test-native-bridge-resolution.ps1  test-v03617-reliability-gate.ps1  test-v03618-release-hardening.ps1  (+13 more)
sdk/: README.md
src/: control.rs  input.rs  layout.rs  main.rs
tasks/: README.md  backlog.yaml  roadmap-title-ja.example.psd1  roadmap-title-ja.psd1
tests/: AgentReadiness.Tests.ps1  BuilderWorktree.Tests.ps1  CliBakeoff.Tests.ps1  ColabAcceptance.Tests.ps1  README.md  (+49 more)
tests-rs/: test_commands.rs  test_commands_audit.rs  test_layout.rs  test_parity.rs  test_server.rs
winsmux-app/src-tauri/: Cargo.toml  nsis-installer-hooks.nsh  tauri.ci.conf.json  tauri.conf.json  wix-en-US.wxl  wix-explorer-context-menu.wxs  wix-ja-JP.wxl
winsmux-app/src-tauri/capabilities/: default.json  secondary-surface.json
winsmux-app/src-tauri/icons/: icon.icns
winsmux-app/src-tauri/scripts/: sign-windows-bundle.ps1
winsmux-app/src-tauri/src/: control_pipe.rs  desktop_backend.rs  desktop_session_restore.rs  lib.rs  main.rs  pty_backend.rs
(+358 files in other folders)
