[package]
name = "winsmux"
version = "0.24.18"
edition = "2021"
description = "Windows-native terminal multiplexer and agent workspace runtime"
license = "Apache-2.0 AND MIT"
repository = "https://github.com/Sora-bluesky/winsmux"
keywords = ["terminal", "multiplexer", "tmux", "windows", "powershell"]
categories = ["command-line-utilities"]

# Disable auto-discovery of integration tests from tests/ directory
[[test]]
name = "test_vt100_mouse"
path = "tests-rs/test_vt100_mouse.rs"

[[test]]
name = "test_issue155_sgr_attrs"
path = "tests-rs/test_issue155_sgr_attrs.rs"

[[test]]
name = "test_issue155_rendering"
path = "tests-rs/test_issue155_rendering.rs"

[[test]]
name = "manifest_contract"
path = "tests-rs/manifest_contract.rs"

[[test]]
name = "event_contract"
path = "tests-rs/event_contract.rs"

[[test]]
name = "machine_contract"
path = "tests-rs/machine_contract.rs"

[[test]]
name = "ledger_contract"
path = "tests-rs/ledger_contract.rs"

[[test]]
name = "fixture_comparison"
path = "tests-rs/fixture_comparison.rs"

[[test]]
name = "operator_cli"
path = "tests-rs/operator_cli.rs"

[[test]]
name = "search_ledger_contract"
path = "tests-rs/search_ledger_contract.rs"

# Windows only
[target.'cfg(not(windows))'.dependencies]
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
] }

[[bin]]
name = "winsmux"
path = "src/main.rs"

[[bin]]
name = "psmux"
path = "src/main.rs"

[[bin]]
name = "pmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = { version = "0.9.2", path = "crates/portable-pty-winsmux", package = "portable-pty-winsmux" }
which = "8"
chrono = "0.4"
vt100 = { version = "0.16.5", path = "crates/vt100-winsmux", package = "vt100-winsmux" }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1"
glob = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
